# Web

lab3/: index.html
lab3/Continuar/: 2A.html  2B.html  3A.html  3B.html  3C.html  4A.html  4B.html  4C.html  4D.html  4E.html  4F.html
lab4/: index.html  index2.html  only.css  prueba.css
lab5/: index.html
labtamb/: index.html
mi_proyecto/: Cargo.toml  Dockerfile  docker-compose.yml  partidos.sql
mi_proyecto/.devcontainer/: devcontainer.json
mi_proyecto/src/: handlers.rs  main.rs  models.rs
