[package]
name = "laliga-tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.5.1"  # Versión más reciente
actix-files = "0.6.0"  # Agrega esta línea
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
sqlx = { version = "0.7.3", features = ["postgres", "runtime-tokio-native-tls", "chrono", "macros"] }
chrono = { version = "0.4.38", features = ["serde"] }
dotenvy = "0.15.7"  # Cambia dotenv por dotenvy